# Simple-Genetic-Algorithm

./: CMakeLists.txt  Main.cpp  README.md
include/: Chromosome.h  GeneticAlgorithm.h
note/: GA.md
rsrc/: 1_课题二 - 8.1.docx
src/: Chromosome.cpp  GeneticAlgorithm.cpp
